# MissQuiz

./: .dockerignore  .env.example  .gitignore  BROADCAST_SYSTEM_TEST_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_CORRUPTION_NOTICE.md  DEPLOY.md  DEVELOPER_COMMANDS.md  DEVELOPER_COMMANDS_TEST_REPORT.md  Dockerfile  FINAL_TEST_REPORT.md  GROUP_COMMANDS_TEST_REPORT.md  LEADERBOARD_PAGINATION_TEST_REPORT.md  PAGINATION_CODE_REFERENCE.md  PAGINATION_TEST_EXECUTIVE_SUMMARY.md  PM_COMMANDS_TEST_REPORT.md  PUSH_TO_GITHUB.md  Procfile  README.md  REAL_TIME_STATS_VERIFICATION_REPORT.md  TEST_REPORT.md  VERSION_2.0_SUMMARY.txt  app.py  bot_handlers.py  bot_handlers_new.py  config.py  database_manager.py  dev_commands.py  docker-compose.yml  keep_alive.py  main.py  migrate_to_sqlite.py  new_commands.py  push_to_github.sh  pyproject.toml  quiz_manager.py  render.yaml  replit.md  requirements.txt
attached_assets/: Pasted--Available-at-your-primary-URL-https-missquiz-onrender-com--1759606600809_1759606600810.txt  Pasted--Cloning-from-https-github-com-ownermood2-MissQuiz-Checking-out-commit-2e2289c2aad8c02333b62e-1759592830887_1759592830888.txt  Pasted--Cloning-from-https-github-com-ownermood2-quiz-Checking-out-commit-41d84de929ef1e21917b9da443-1759571477000_1759571477002.txt  Pasted--Deploying-2025-10-04-09-36-46-722-main-WARNING-WEBHOOK-MODE-DETECTED-2025-10-04-0-1759570715912_1759570715913.txt  Pasted--Deploying-2025-10-04-15-09-23-927-main-WARNING-WEBHOOK-MODE-DETECTED-2025-10-04-1-1759590823210_1759590823210.txt  Pasted--Your-service-is-live--1759481407429_1759481407430.txt  (+42 more)
(+11 files in other folders)
