[project]
name = "telegram-quiz-bot"
version = "1.0.0"
description = "Production-ready Telegram Quiz Bot with automated quiz delivery, live statistics tracking, and comprehensive analytics"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "python-telegram-bot[job-queue,webhooks]>=22.4",
]
